# turglem-russian-0.2

./: CMakeLists.txt  README.md  gramtab.xml  morph_compiler_russian.cpp  test_utf8.c  test_utf8.cpp
include/turglem/russian/: charset_adapters.h
